# fastapi-ddd-example

./: .gitignore  pyproject.toml
src/: main.py
src/application/services/: account_service.py
src/application/use_case/accounts/: views.py
src/domain/aggregates/: account.py
src/domain/entities/: user.py  user_creation.py
src/domain/types/: pagination_page.py  pagination_size.py  personal_age.py  personal_name.py  user_id.py
src/domain/value_objects/: pagination.py  personal_information.py
src/infrastructure/repositories/account/: interface.py
src/infrastructure/repositories/account/exceptions/: account_not_found_error.py
src/infrastructure/repositories/account/repositories/account_repository_in_memory/: alias.py  repository.py
tests/: conftest.py
tests/application/services/: test_account_service.py
tests/application/use_case/accounts/: test_views.py
tests/domain/aggregates/: test_account.py
tests/domain/entities/: test_user.py
tests/domain/value_objects/: test_pagination.py  test_personal_information.py
tests/infratructure/repositories/account/repositories/account_repository_in_memory/: test_account_repository_in_memory.py
