[tool.poetry]
name = "fastapi-ddd-example"
version = "0.1.0"
description = ""
authors = ["guibos <22233599+guibos@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
fastapi = {extras = ["all"], version = "^0.103.2"}
pytest-asyncio = "^0.21.1"



[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
addopts = [
    "--import-mode=importlib",
]
